src/objects/Certification__c.object
<CustomObject>
    <description>Record of a Partner&apos;s certification.</description>
    <fields>
        <fullName>Certification_Name__c</fullName>
        <description>Name of the certification record.
Naming convention:
[Pivotal Product] - [Partner Product]</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id,Pivotal_Product_Version__r.Product_Name_Piv__r.Name &amp; &apos; &apos; &amp; Pivotal_Product_Version__r.Name &amp; &apos; - &apos; &amp; Partner_Product_Version__r.Product_Name_Partner__r.Name &amp; &apos; &apos; &amp; Partner_Product_Version__r.Name, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certification Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Effective date of the certification.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <description>Link to the Partner account.

Note the complicated formula which allows the name to be properly displayed.</description>
        <formula>HYPERLINK( &apos;/&apos; &amp; Partner_Product_Version__r.Product_Name_Partner__r.Account__r.Name,&apos;&apos;) &amp; HYPERLINK( &apos;/&apos; &amp; Partner_Product_Version__r.Product_Name_Partner__r.Account__c, Partner_Product_Version__r.Product_Name_Partner__r.Account__r.Name, &apos;_parent&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Product_Version__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Partner Product Version</label>
        <referenceTo>Partner_Product_Version__c</referenceTo>
        <relationshipLabel>Certifications</relationshipLabel>
        <relationshipName>Certifications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Product_f__c</fullName>
        <description>Links to the partner product.

Note the complicated formula which allows the name to be displayed without error.</description>
        <formula>HYPERLINK( &apos;/&apos; &amp; Partner_Product_Version__r.Product_Name_Partner__r.Name,&apos;&apos;) &amp; HYPERLINK( &apos;/&apos; &amp; Partner_Product_Version__r.Product_Name_Partner__c, Partner_Product_Version__r.Product_Name_Partner__r.Name, &apos;_parent&apos;)</formula>
        <label>Partner Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pivotal_Product_Version__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Pivotal Product Version</label>
        <referenceTo>Pivotal_Integrated_Product_Version__c</referenceTo>
        <relationshipLabel>Certifications</relationshipLabel>
        <relationshipName>Certifications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pivotal_Product_f__c</fullName>
        <description>This field links to the Pivotal Product.

Note the complicated formula which allowed the name to be properly displayed.</description>
        <formula>HYPERLINK( &apos;/&apos; &amp; Pivotal_Product_Version__r.Product_Name_Piv__r.Name,&apos;&apos;) &amp; HYPERLINK( &apos;/&apos; &amp; Pivotal_Product_Version__r.Product_Name_Piv__c, Pivotal_Product_Version__r.Product_Name_Piv__r.Name, &apos;_parent&apos;)</formula>
        <label>Pivotal Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Certification</label>
    <listViews>
        <fullName>All_Certifications</fullName>
        <columns>Certification_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Certifications</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Certification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>notEmpty</fullName>
        <active>true</active>
        <description>The User must pick a value for Status.</description>
        <errorConditionFormula>ISPICKVAL(Status__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Must pick a field</errorMessage>
    </validationRules>
</CustomObject>